[gd_scene load_steps=5 format=3 uid="uid://byv8ld4ot1xua"]

[ext_resource type="Script" path="res://Rooms/My_rooms/Stage_Boss/boss_turret.gd" id="1_olybi"]

[sub_resource type="Animation" id="Animation_p236u"]
resource_name = "RESET"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("turretShape/Laser:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.803922, 0.207843, 0.258824, 0.694118)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("turretShape/Laser:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_c0ljl"]
resource_name = "laserfire"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("turretShape/Laser:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.694118), Color(0.803922, 0.207843, 0.258824, 0.694118)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("turretShape/Laser:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(4, 4), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dty8w"]
_data = {
"RESET": SubResource("Animation_p236u"),
"laserfire": SubResource("Animation_c0ljl")
}

[node name="bossTurret" type="Node2D"]
z_index = -1
scale = Vector2(0.666667, 0.666667)
script = ExtResource("1_olybi")

[node name="turretShape" type="Polygon2D" parent="."]
polygon = PackedVector2Array(16, 0, -8, -8, 0, 0, -8, 8)

[node name="Laser" type="Polygon2D" parent="turretShape"]
visible = false
z_index = -1
color = Color(0.803922, 0.207843, 0.258824, 0.694118)
polygon = PackedVector2Array(0, -1, 912, -1, 912, 1, 0, 1)

[node name="Target" type="Node2D" parent="."]
position = Vector2(128, 88)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dty8w")
}

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="hitbox"]
polygon = PackedVector2Array(0, -2, 912, -2, 912, 2, 0, 2)

[connection signal="body_entered" from="hitbox" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
